--- a/tags/static_tags.yml
+++ b/tags/static_tags.yml
@@ -9,3 +9,5 @@ NSFW全裸: rough_sex, nsfw, rape, visible_air, (completely_nude), rolling_eyes,
 NSFW中出: rough_sex, nsfw, rape, visible_air, (completely_nude:1.2), rolling_eyes, heart, (pussy), (breasts_out:1.3), (female_orgasm:1.1), cum, creampie, milk, cum_in_pussy,  tongue_out, female ejaculation, sweaty, (penis_in_pussy), (bouncing_breasts), heart_in_eye, panties_around_one_leg, symbol_in_eye
 
 质量: narrow waist, ultra cg, perfect artwork, masterpiece, picture-perfect face, perfect face, beautiful face, ((perfect female body)), sexy, seductive, erotic, alluring, enchanting, ((intricate detail, delicate pattern)), masterpiece, best quality, good quality, newest,
+
+负面: lowres,worst quality,bad quality,bad anatomy,sketch,jpeg artifacts,signature,watermark,artist name,old,shiny skin,mammal,furry,ambiguous form, (2girls), (3girls), 2boys,extra fingers, mutated hands, extra_digits, malformed limbs, spider_web 
