--- a/tags/sex.yml
+++ b/tags/sex.yml
@@ -1,6 +1,6 @@
 # 本阶段不涉及两性，完全Safe for work
 自我展示:
-  微笑: smile, 
+  # 微笑: smile, 
   坐立腿: knee_up, sitting
   鸭子坐: wariza 
   坐并向后看: sitting, looking_back  
@@ -13,30 +13,30 @@
 
 # 本阶段不涉及性器官接触
 调戏:
-  搂腰: hands_on_another's_waist, (upper_body:1.2)
+  # 搂腰: hands_on_another's_waist, (upper_body:1.2)
   法式舌吻: french_kiss, (close up view:1.5)
-  拽下巴: hand_on_another's_chin, (close up view:1.5)
-  拽舌头: tongue_grab, (close up view:1.5)
+  # 拽下巴: hand_on_another's_chin, (close up view:1.5)
+  # 拽舌头: tongue_grab, (close up view:1.5)
   亲吻: kiss, kissing_cheek, (upper_body:1.2), close up view,
   口交手势: (oral_invitation:1.2), implied_fellatio, fellatio_gesture, implied_sex, implied_fingering
-  舔手指: licking_finger, (finger_in_another's_mouth:1.2),
+  # 舔手指: licking_finger, (finger_in_another's_mouth:1.2),
 # https://danbooru.donmai.us/posts/7827252?q=tour_guide
 # 本阶段不涉及性器插入，但其他什么都做了
 进一步调戏:
-  摸阴: hand_in_panties, (hand_in_another's_panties:1.2),
+  # 摸阴: hand_in_panties, (hand_in_another's_panties:1.2),
   背后抓屁股: (chikan), (molestation), standing, ass, (ass_focus:1.2), (lower_body:1.2), hand_in_another's_panties, clothes lift, (groping:1.2),  (grabbing_another's_ass:1.4), (public_indecency:1.2),solo focus, from behind, clothed_male, sexual_harassment, struggling, pussy_juice_trail, (male_out_of_frame),
-  即将性交抓乳: imminent_breast_grab, 
+  # 即将性交抓乳: imminent_breast_grab, 
   背后抓胸摸阴: standing, groping, grabbing_from_behind, (grabbing_another's_breast:1.2),  (knee_shot:1.4), nipples, breasts, navel, naughty face, hand_in_panties,fingering, (straight-on:1.3), (seductive_smile:1.1), heart, solo focus, looking_at_viewer,squeezing ,
   调戏乳头: (nipple_tweak, nipple_stimulation, grabbing another's breast, groping)
   塞着跳蛋且穿着衣服: vibrator_under_clothes, disembodied_hand, blush, remote control vibrator, holding sex toy
-  舔陰: cunnilingus, spread_legs,
-  舔睾丸: testicle_sucking, (licking_testicle), female_knealing, knealing, 
+  # 舔陰: cunnilingus, spread_legs,
+  # 舔睾丸: testicle_sucking, (licking_testicle), female_knealing, knealing, 
 
 口交:
   口交: (fellatio), oral, penis_in_mouth, (upper_body:1.5)
   摁头pov: head_grab, (deepthroat:1.1), oral, (irrumatio:1.2), penis_in_mouth, (close up view:1.5), pov, 
-  摁头: head_grab, (deepthroat:1.1), oral, (irrumatio:1.2), penis_in_mouth, (close up view:1.5), 
-  抓脖子口交: (reverse_fellatio:1.3), (irrumatio:1.2), choke_hold, (close up view:1.3), lying, throat_bulge, (deepthroat:1.1), (solo_focus:1.1),
+  # 摁头: head_grab, (deepthroat:1.1), oral, (irrumatio:1.2), penis_in_mouth, (close up view:1.5), 
+  # 抓脖子口交: (reverse_fellatio:1.3), (irrumatio:1.2), choke_hold, (close up view:1.3), lying, throat_bulge, (deepthroat:1.1), (solo_focus:1.1),
   # hand_on_another's_neck, (deepthroat:1.1), (solo_focus:1.3), (on_back:1.2), (head_back:1.3), oral, 
 口交结束:
   口腔噴精: (fellatio), (oral), irrumatio, penis_in_mouth, (upper_body:1.5), cum_in_mouth,  
@@ -44,7 +44,7 @@
   狗食盆舔精: cum_in_container, pet_bowl, gokkun, leash, tongue_out, tongue
 
 准备:
-  即将性交: grinding, frottage, imminent_sex, imminent_rape, imminent_vaginal
+  # 即将性交: grinding, frottage, imminent_sex, imminent_rape, imminent_vaginal
   素股: yiwen_sex, thigh_sex, grinding, frottage, imminent_sex, imminent_rape, imminent_vaginal, penis
   屁股交: (buttjob:1.2), looking_back, ass, back, grinding
 
@@ -64,11 +64,11 @@
   推车式: trembling, (ass), no_panties, shorts_around_one_leg, (sex_from_behind), motion_lines, brown_background, standing_sex, (torso_grab), (male_standing), (lifting_person), (legs_up:1.2), (female arm supporting on ground while both legs being lifted up), (female_head_down:1.2), (legs_over_head), (downward_dog), (arm_support),on_stomach,
 
 事后:
-  踩头事后: (male_standing), (stepped on:1.4), (female's head is being stepped by a standing male), (foot_on_head:1.2), bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, cum on body, cum on hair, sweating_profusely, (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape, (top-down_bottom-up:1.3), (tongue_out), 
+  # 踩头事后: (male_standing), (stepped on:1.4), (female's head is being stepped by a standing male), (foot_on_head:1.2), bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, cum on body, cum on hair, sweating_profusely, (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape, (top-down_bottom-up:1.3), (tongue_out), 
   抓胸事后: (grabbing_another's_breast:1.2), (lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.3), after_vaginal, (cumdrip:1.2), cum on body, cum on breasts, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape,penis_to_breast,vaginal_object_insertion 
   掰阴事后: (spreading_another's_pussy:1.2), (lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, (cumdrip:1.2), cum on body, cum on breasts, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape
   强制笑双V事后: (double_v:1.2), (forced_smile:1.2), (finger in another's mouth:1.2),(lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, (cumdrip:1.2), cum on body, cum on breasts, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape,vaginal_object_insertion 
   趴下吐舌spank: (slap_mark:1.2),spanking,ass_ripple, (lying), (on_stomach:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, (cumdrip:1.2), cum on body, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), heart_in_eye, symbol_in_eye, (tired_girl), sweaty, (used_condom), (tongue_out), stained_sheets, ruined_for_marriage, tally, after_rape
-  踩奶: (male_standing), (stepped on:1.4), bowlegged_pose, (female's breasts are being stepped by a standing male), (foot_on_breast:1.2), (lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, (cumdrip:1.2), cum on body, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape, penis
+  # 踩奶: (male_standing), (stepped on:1.4), bowlegged_pose, (female's breasts are being stepped by a standing male), (foot_on_breast:1.2), (lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, (cumdrip:1.2), cum on body, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape, penis
   遮眼: penis on face, penis over one eye, recording, (lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, (cumdrip:1.2), cum on body, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape
-  翘二郎腿: https://danbooru.donmai.us/posts/8493388?q=gokkun
+  # 翘二郎腿: https://danbooru.donmai.us/posts/8493388?q=gokkun
