--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
             "request": "launch",
             "program": "main.py",
             "args": [
-                "--config_file",
-                "config/test.yml"
+                // "--config_file",
+                // "config/test.yml"
             ],
             "console": "integratedTerminal"
         }
