--- a/tags/sex.yml
+++ b/tags/sex.yml
@@ -1,66 +1,81 @@
 # 本阶段不涉及两性，完全Safe for work
-自我展示:
-  # 微笑: smile, 
+自我展示: 
   坐立腿: knee_up, sitting
   鸭子坐: wariza 
   坐并向后看: sitting, looking_back  
   鸭子坐并向后看: wariza, sitting, looking_back  
   双手举起: arms up, cowboy shot, 
-  # 脚很难画
   站立撩发: standing, cowboy shot, hand up, (hair_flip:1.2)
   蔑视你: looking at viewer, from_below, 
-  # 脚伸过来: barefoot, feet, foot_focus
+  口交手势: (oral_invitation:1.2), (fellatio_gesture:1.3), dynamic angle, depth of field,
+  # 脚很难画
+
 
 # 本阶段不涉及性器官接触
 调戏:
-  # 搂腰: hands_on_another's_waist, (upper_body:1.2)
-  法式舌吻: french_kiss, (close up view:1.5)
-  # 拽下巴: hand_on_another's_chin, (close up view:1.5)
-  # 拽舌头: tongue_grab, (close up view:1.5)
-  亲吻: kiss, kissing_cheek, (upper_body:1.2), close up view,
-  口交手势: (oral_invitation:1.2), implied_fellatio, fellatio_gesture, implied_sex, implied_fingering
-  # 舔手指: licking_finger, (finger_in_another's_mouth:1.2),
-# https://danbooru.donmai.us/posts/7827252?q=tour_guide
+  法式舌吻: french_kiss, (upper_body:1.3), kiss, holding another's arm, 
+  拽下巴: (hand_on_another's_chin:1.2), (solo focus:1.3), upper body, grabbing another's chin, looking at another, 
+  拽舌头: tongue out, tongue, (tongue_grab:1.3), (solo focus:1.3), upper body, pov, open mouth, pov hands, (a man is grabbing girl's tongue), hand on another's cheek, 
+  吮吸手指: licking_finger, finger_sucking,  (finger_in_another's_mouth:1.4), upper body, looking at viewer, pov,  pov hands, hand on another's cheek, (solo focus:1.3)
+  搂抱: cowboy shot, (hug:1.3), 
+  # 有几率出背后搂抱
+  背后搂抱: cowboy shot, (hug_from_behind:1.2), 
+  # 拽舌头很难画
+
+
 # 本阶段不涉及性器插入，但其他什么都做了
 进一步调戏:
-  # 摸阴: hand_in_panties, (hand_in_another's_panties:1.2),
-  背后抓屁股: (chikan), (molestation), standing, ass, (ass_focus:1.2), (lower_body:1.2), hand_in_another's_panties, clothes lift, (groping:1.2),  (grabbing_another's_ass:1.4), (public_indecency:1.2),solo focus, from behind, clothed_male, sexual_harassment, struggling, pussy_juice_trail, (male_out_of_frame),
-  # 即将性交抓乳: imminent_breast_grab, 
+  摸阴: (molestation:1.3), standing, (hand_in_another's_panties:1.2), fingering from behind, sexual_harassment, 
+  # 参考图
+  # https://danbooru.donmai.us/posts/8612568?q=molestation+ass
+  # https://danbooru.donmai.us/posts/7827252?q=tour_guide
+  背后抓屁股: skirt lift, (molestation:1.3), standing, ass, back, (lower_body:1.3), fingering from behind,  (grabbing_another's_ass:1.4), from below, sexual_harassment, standing_male, dutch_angle
   背后抓胸摸阴: standing, groping, grabbing_from_behind, (grabbing_another's_breast:1.2),  (knee_shot:1.4), nipples, breasts, navel, naughty face, hand_in_panties,fingering, (straight-on:1.3), (seductive_smile:1.1), heart, solo focus, looking_at_viewer,squeezing ,
   调戏乳头: (nipple_tweak, nipple_stimulation, grabbing another's breast, groping)
-  塞着跳蛋且穿着衣服: vibrator_under_clothes, disembodied_hand, blush, remote control vibrator, holding sex toy
-  # 舔陰: cunnilingus, spread_legs,
-  # 舔睾丸: testicle_sucking, (licking_testicle), female_knealing, knealing, 
+  吸乳: (breast_sucking, breasts, groping)
+  挤奶: (breasts_squeezed_together:1.3), grabbing_another's_breast, grabbing_from_behind,  embarrassed, forced lactation, hand_milking, clenched teeth, upper_body, arms_up,
+  舔陰: cunnilingus, spread_legs,
+  舔睾丸: penis, erection, (penis over one eye), testicle_sucking, (licking_testicle),
 
 口交:
   口交: (fellatio), oral, penis_in_mouth, (upper_body:1.5)
   摁头pov: head_grab, (deepthroat:1.1), oral, (irrumatio:1.2), penis_in_mouth, (close up view:1.5), pov, 
-  # 摁头: head_grab, (deepthroat:1.1), oral, (irrumatio:1.2), penis_in_mouth, (close up view:1.5), 
-  # 抓脖子口交: (reverse_fellatio:1.3), (irrumatio:1.2), choke_hold, (close up view:1.3), lying, throat_bulge, (deepthroat:1.1), (solo_focus:1.1),
-  # hand_on_another's_neck, (deepthroat:1.1), (solo_focus:1.3), (on_back:1.2), (head_back:1.3), oral, 
+  蹲踞口交背后: implied_fellatio, squatting, spread legs, from behind ,
+  蹲踞口交正面: fellatio , squatting, spread legs, from behind , cleavage,  penis, testicles, (view_between_legs:1.3),
+  鸭子坐口交背后: implied_fellatio, wariza, from behind ,
+  鸭子坐口交正面: fellatio , wariza, from behind , cleavage,  penis, testicles, (view_between_legs:1.3),
+  摁头侧边视角: head_grab, (deepthroat:1.1), oral, (irrumatio:1.2), penis_in_mouth, kneeling, (from_side),
+
+
 口交结束:
   口腔噴精: (fellatio), (oral), irrumatio, penis_in_mouth, (upper_body:1.5), cum_in_mouth,  
   口腔成果展示: after_fellatio, (upper_body:1.5), cum_on_tongue, tongue_out, v, looking_at_viewer, pov, 
-  狗食盆舔精: cum_in_container, pet_bowl, gokkun, leash, tongue_out, tongue
+
 
 准备:
-  # 即将性交: grinding, frottage, imminent_sex, imminent_rape, imminent_vaginal
   素股: yiwen_sex, thigh_sex, grinding, frottage, imminent_sex, imminent_rape, imminent_vaginal, penis
   屁股交: (buttjob:1.2), looking_back, ass, back, grinding
 
 进行:
   后入开腿: sex_from_behind, doggystyle, spread_legs, 
-  后入并腿站立: sex_from_behind, doggystyle, legs_together, standing_sex
+  后入并腿站立: sex_from_behind, doggystyle, legs_together, standing_sex, tiptoe
   后入抬腿: sex_from_behind, doggystyle, spread_legs, leg_lift, standing_sex
-  傳教士體位: missionary_sex, spread_legs
+  后入拉腕: sex_from_behind, doggystyle, holding_another's_wrist
+
+  傳教士體位: missionary, spread_legs, sex
+
   女上體位: girl_on_top sex, spread_legs
-  反向女牛仔位置: reverse_cowgirl_position sex
-  反向直立跨騎: reverse_upright_straddle sex 
-  女性坐姿: sitting_on sex
-  跨坐式: leg lock sex
-  折疊: legs_folded_sex
-  臉朝下屁股朝上: top-down_bottom-up sex
-  播种打桩机: (mating_press:1.3)
+  反向女上體位: reverse_cowgirl_position, sex
+
+  面对面跨骑(坐): sitting, (upright_straddle:1.3), (leg_lock:1.2), sex 
+  反向跨骑(坐): sitting, (reverse_upright_straddle:1.3), sex 
+
+  面对面跨骑(站): standing, (leg_lock:1.2), sex, standing_sex, (suspended_congress:1.3)
+  反向跨骑(坐)火车便当: standing, sex, standing_sex, (reverse_suspended_congress:1.3)
+  臉朝下屁股朝上: top-down_bottom-up, sex
+  臉朝下屁股朝上按头: top-down_bottom-up, sex, pinned, head_pinned_down 
+  
+  播种打桩机: (mating_press:1.3), lying, spread legs ,
   推车式: trembling, (ass), no_panties, shorts_around_one_leg, (sex_from_behind), motion_lines, brown_background, standing_sex, (torso_grab), (male_standing), (lifting_person), (legs_up:1.2), (female arm supporting on ground while both legs being lifted up), (female_head_down:1.2), (legs_over_head), (downward_dog), (arm_support),on_stomach,
 
 事后:
@@ -72,3 +87,4 @@
   # 踩奶: (male_standing), (stepped on:1.4), bowlegged_pose, (female's breasts are being stepped by a standing male), (foot_on_breast:1.2), (lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, (cumdrip:1.2), cum on body, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape, penis
   遮眼: penis on face, penis over one eye, recording, (lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, (cumdrip:1.2), cum on body, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape
   # 翘二郎腿: https://danbooru.donmai.us/posts/8493388?q=gokkun
+  # 狗食盆: wewwevew
