add some more poses

--- a/tags/sex.yml
+++ b/tags/sex.yml
@@ -1,31 +1,29 @@
 # 本阶段不涉及两性，完全Safe for work
-自我展示: 
+自我展示:
   坐立腿: knee_up, sitting
-  鸭子坐: wariza 
-  坐并向后看: sitting, looking_back  
-  鸭子坐并向后看: wariza, sitting, looking_back  
-  双手举起: arms up, cowboy shot, 
+  鸭子坐: wariza
+  坐并向后看: sitting, looking_back
+  鸭子坐并向后看: wariza, sitting, looking_back
+  双手举起: arms up, cowboy shot,
   站立撩发: standing, cowboy shot, hand up, (hair_flip:1.2)
-  蔑视你: looking at viewer, from_below, 
+  蔑视你: looking at viewer, from_below,
   口交手势: (oral_invitation:1.2), (fellatio_gesture:1.3), dynamic angle, depth of field,
   # 脚很难画
 
-
 # 本阶段不涉及性器官接触
 调戏:
-  法式舌吻: french_kiss, (upper_body:1.3), kiss, holding another's arm, 
-  拽下巴: (hand_on_another's_chin:1.2), (solo focus:1.3), upper body, grabbing another's chin, looking at another, 
-  拽舌头: tongue out, tongue, (tongue_grab:1.3), (solo focus:1.3), upper body, pov, open mouth, pov hands, (a man is grabbing girl's tongue), hand on another's cheek, 
+  法式舌吻: french_kiss, (upper_body:1.3), kiss, holding another's arm,
+  拽下巴: (hand_on_another's_chin:1.2), (solo focus:1.3), upper body, grabbing another's chin, looking at another,
+  拽舌头: tongue out, tongue, (tongue_grab:1.3), (solo focus:1.3), upper body, pov, open mouth, pov hands, (a man is grabbing girl's tongue), hand on another's cheek,
   吮吸手指: licking_finger, finger_sucking,  (finger_in_another's_mouth:1.4), upper body, looking at viewer, pov,  pov hands, hand on another's cheek, (solo focus:1.3)
-  搂抱: cowboy shot, (hug:1.3), 
+  搂抱: cowboy shot, (hug:1.3),
   # 有几率出背后搂抱
-  背后搂抱: cowboy shot, (hug_from_behind:1.2), 
+  背后搂抱: cowboy shot, (hug_from_behind:1.2),
   # 拽舌头很难画
-
 
 # 本阶段不涉及性器插入，但其他什么都做了
 进一步调戏:
-  摸阴: (molestation:1.3), standing, (hand_in_another's_panties:1.2), fingering from behind, sexual_harassment, 
+  摸阴: (molestation:1.3), standing, (hand_in_another's_panties:1.2), fingering from behind, sexual_harassment,
   # 参考图
   # https://danbooru.donmai.us/posts/8612568?q=molestation+ass
   # https://danbooru.donmai.us/posts/7827252?q=tour_guide
@@ -39,50 +37,54 @@
 
 口交:
   口交: (fellatio), oral, penis_in_mouth, (upper_body:1.5)
-  摁头pov: head_grab, (deepthroat:1.1), oral, (irrumatio:1.2), penis_in_mouth, (close up view:1.5), pov, 
+  摁头pov: head_grab, (deepthroat:1.1), oral, (irrumatio:1.2), penis_in_mouth, (close up view:1.5), pov,
   蹲踞口交背后: implied_fellatio, squatting, spread legs, from behind ,
   蹲踞口交正面: fellatio , squatting, spread legs, from behind , cleavage,  penis, testicles, (view_between_legs:1.3),
   鸭子坐口交背后: implied_fellatio, wariza, from behind ,
   鸭子坐口交正面: fellatio , wariza, from behind , cleavage,  penis, testicles, (view_between_legs:1.3),
   摁头侧边视角: head_grab, (deepthroat:1.1), oral, (irrumatio:1.2), penis_in_mouth, kneeling, (from_side),
 
-
 口交结束:
-  口腔噴精: (fellatio), (oral), irrumatio, penis_in_mouth, (upper_body:1.5), cum_in_mouth,  
-  口腔成果展示: after_fellatio, (upper_body:1.5), cum_on_tongue, tongue_out, v, looking_at_viewer, pov, 
-
+  口腔噴精: (fellatio), (oral), irrumatio, penis_in_mouth, (upper_body:1.5), cum_in_mouth,
+  口腔成果展示: after_fellatio, (upper_body:1.5), cum_on_tongue, tongue_out, v, looking_at_viewer, pov,
 
 准备:
   素股: yiwen_sex, thigh_sex, grinding, frottage, imminent_sex, imminent_rape, imminent_vaginal, penis
   屁股交: (buttjob:1.2), looking_back, ass, back, grinding
 
 进行:
-  后入开腿: sex_from_behind, doggystyle, spread_legs, 
+  后入开腿: sex_from_behind, doggystyle, spread_legs,
   后入并腿站立: sex_from_behind, doggystyle, legs_together, standing_sex, tiptoe
   后入抬腿: sex_from_behind, doggystyle, spread_legs, leg_lift, standing_sex
-  后入拉腕: sex_from_behind, doggystyle, holding_another's_wrist
+  后入拉腕: (sex_from_behind, doggystyle), sex, (holding_another's_wrist:1.3),  from behind , solo_focus, (face_down:1.2)
+  
+  # 这个好难，参考：https://danbooru.donmai.us/posts/5963184?q=upside-down_kiss
+  # 后入弓背亲吻: (sex_from_behind:1.2), (doggystyle:1.2), (upside-down_kiss:1.3), (arched_back:1.2), (head_back:1.3), (grabbing_another's_hair), (dutch_angle), rough_sex,  
 
   傳教士體位: missionary, spread_legs, sex
+  傳教士拉腕: motion_lines, missionary, spread_legs, sex, lying, (on_back), pov, solo_focus, pov_hands, (holding_another's_wrist:1.3)
 
   女上體位: girl_on_top sex, spread_legs
+  女上双手抱头: arms up, arm_behind_head, girl_on_top, sex, spread_legs, looking at viewer, squatting_cowgirl_position, straddling
   反向女上體位: reverse_cowgirl_position, sex
 
-  面对面跨骑(坐): sitting, (upright_straddle:1.3), (leg_lock:1.2), sex 
-  反向跨骑(坐): sitting, (reverse_upright_straddle:1.3), sex 
+  面对面跨骑(坐): sitting, (upright_straddle:1.3), (leg_lock:1.2), sex
+  反向跨骑(坐): sitting, (reverse_upright_straddle:1.3), sex
 
   面对面跨骑(站): standing, (leg_lock:1.2), sex, standing_sex, (suspended_congress:1.3)
   反向跨骑(坐)火车便当: standing, sex, standing_sex, (reverse_suspended_congress:1.3)
+
   臉朝下屁股朝上: top-down_bottom-up, sex
-  臉朝下屁股朝上按头: top-down_bottom-up, sex, pinned, head_pinned_down 
-  
+  臉朝下屁股朝上按头: top-down_bottom-up, sex, pinned, head_pinned_down
+
   播种打桩机: (mating_press:1.3), lying, spread legs ,
   推车式: trembling, (ass), no_panties, shorts_around_one_leg, (sex_from_behind), motion_lines, brown_background, standing_sex, (torso_grab), (male_standing), (lifting_person), (legs_up:1.2), (female arm supporting on ground while both legs being lifted up), (female_head_down:1.2), (legs_over_head), (downward_dog), (arm_support),on_stomach,
 
 事后:
-  # 踩头事后: (male_standing), (stepped on:1.4), (female's head is being stepped by a standing male), (foot_on_head:1.2), bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, cum on body, cum on hair, sweating_profusely, (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape, (top-down_bottom-up:1.3), (tongue_out), 
-  抓胸事后: (grabbing_another's_breast:1.2), (lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.3), after_vaginal, (cumdrip:1.2), cum on body, cum on breasts, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape,penis_to_breast,vaginal_object_insertion 
+  # 踩头事后: (male_standing), (stepped on:1.4), (female's head is being stepped by a standing male), (foot_on_head:1.2), bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, cum on body, cum on hair, sweating_profusely, (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape, (top-down_bottom-up:1.3), (tongue_out),
+  抓胸事后: (grabbing_another's_breast:1.2), (lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.3), after_vaginal, (cumdrip:1.2), cum on body, cum on breasts, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape,penis_to_breast,vaginal_object_insertion
   掰阴事后: (spreading_another's_pussy:1.2), (lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, (cumdrip:1.2), cum on body, cum on breasts, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape
-  强制笑双V事后: (double_v:1.2), (forced_smile:1.2), (finger in another's mouth:1.2),(lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, (cumdrip:1.2), cum on body, cum on breasts, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape,vaginal_object_insertion 
+  强制笑双V事后: (double_v:1.2), (forced_smile:1.2), (finger in another's mouth:1.2),(lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, (cumdrip:1.2), cum on body, cum on breasts, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape,vaginal_object_insertion
   趴下吐舌spank: (slap_mark:1.2),spanking,ass_ripple, (lying), (on_stomach:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, (cumdrip:1.2), cum on body, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), heart_in_eye, symbol_in_eye, (tired_girl), sweaty, (used_condom), (tongue_out), stained_sheets, ruined_for_marriage, tally, after_rape
   # 踩奶: (male_standing), (stepped on:1.4), bowlegged_pose, (female's breasts are being stepped by a standing male), (foot_on_breast:1.2), (lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, (cumdrip:1.2), cum on body, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape, penis
   遮眼: penis on face, penis over one eye, recording, (lying), (on_back:1.3),  bikini_around_one_leg , afterglow, after_sex, clothes_removed, (nude:1.2), after_vaginal, (cumdrip:1.2), cum on body, cum on hair, sweating_profusely, (pussy), (breasts_out:1.2), (empty_eyes), (tired_girl), sweaty, (used_condom), stained_sheets, ruined_for_marriage, tally, after_rape
